# graph-database

./: CMakeLists.txt  Makefile  README.md  client.c  client_convert.c  client_convert.h  query.thrift  server.c  server_convert.c  server_convert.h  thrift.sh
db_lib/: README.md  main.c  main.h  test.h
db_lib/database/: buffer_manager.c  buffer_manager.h  comparation.h  condition.h  connection.c  connection.h  database_manager.c  database_manager.h  exceptions.h  mem.h  query_manager.c  query_manager.h  visualize.c  visualize.h
db_lib/database/data_manipulation/: attribute_crud.c  attribute_crud.h  crud_util.h  cruds.h  link_crud.c  link_crud.h  node_crud.c  node_crud.h  schema_crud.c  schema_crud.h  string_crud.c  string_crud.h  value_crud.c  value_crud.h
db_lib/database/data_structure/: block_heap.c  block_heap.h  block_node.c  block_node.h  generator.c  generator.h  vector.c  vector.h  vector_abstract.h
db_lib/database/model/: attribute_model.c  attribute_model.h  block_model.c  block_model.h  data_type_model.h  database_model.c  database_model.h  link_model.c  link_model.h  models.h  node_model.c  node_model.h  result_model.c  result_model.h  schema_model.c  schema_model.h  string_model.c  string_model.h  value_model.c  value_model.h
db_lib/database/serialize/: attribute_serialize.c  attribute_serialize.h  block_serialize.c  block_serialize.h  link_serialize.c  link_serialize.h  node_serialize.c  node_serialize.h  schema_serialize.c  schema_serialize.h  serializers.h  string_serialize.c  string_serialize.h  util.c  util.h  value_serialize.c  value_serialize.h
gen-c_glib/: query_svc.c  query_svc.h  query_types.c  query_types.h
parser_lib/: .gitignore  README.md  db_model.c  db_model.h  lexer.l  main.c  main.h  parser.y  printer.c  printer.h  query.c  query.h
